# TheGreatWork

./: .gitignore  =2.3.0  PLAYER_README.md  README.md  autofill_dialogue.py  player.html  pyproject.toml  requirements.txt  test-tree-with-images.json  test-tree.json  test_image_only.py  test_sample.json  test_tree.json  test_windows_image_gen.py  tree.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
backup/: tree_backup_20250727_144437.json  tree_backup_20250727_144440.json  tree_backup_20250727_144442.json
examples/: the_king_is_dead.json
images/castle_entrance/: metadata.json
images/castle_side/: metadata.json
images/start/: metadata.json
scripts/: setup.ps1  setup.sh
src/: __init__.py  debugger.py  dialogue_tree.py  illustration.py  image_generation.py  llm_integration.py  web_ui.py
static/: app.js  style.css
static/css/: style.css
static/js/: app.js
templates/: index.html
tests/: test_autofill_dialogue.py  test_debugger.py  test_dialogue_tree.py  test_dialogue_tree_validation.py  test_illustration.py  test_image_generation.py  test_llm_integration.py  test_web_ui.py
web_app/: __init__.py  app.py  requirements.txt
